updating features